--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/howler": "^2.2.0",
+    "gsap": "^3.3.1",
     "howler": "^2.2.0",
     "next": "^9.4.4",
     "react": "^16.13.1",
